docs/gerber.ebnf
<S> ::=                        <gerberCommands>
<gerberCommands> ::=           {"%" <extended> "%" | <standard> "*" | <eof> }
<char> ::=                     any ASCII char
<eof> ::=                      "M02*" {<anyChar>}
<anyCharExceptAsterisk> ::=    [ASCII] - ["*"]
<allowedChars> ::=             A-Za-z0-9,.#@$\n
<optionalNewLines> ::=         {"\n" | "\r"}
<takeTillAsteriskMany> ::=     (<anyCharExceptAsterisk>)* "*"
<takeTillAsteriskMany1> ::=    <anyCharExceptAsterisk> <takeTillAsteriskMany>
<singleBlockWrap> ::=          <singleBlockExtendedCommand> "*"
<multiBlockWrap> ::=           <multiBlockExtendedCommand>
<standard> ::=                 <comment>
<standard> ::=                 <toolChange>
<standard> ::=                 <operation>
<standard> ::=                 <quadrantMode>
<standard> ::=                 <interpolationMode>
<standard> ::=                 <regionBoundary>
<standard> ::=                 <unknownStandard>
<extended> ::=                 <singleBlockCommand> "*" | <multiBlockCommand>
<singleBlockCommand> ::=       <formatSpecification>
<singleBlockCommand> ::=       <setUnits>
<singleBlockCommand> ::=       <addAperture>
<singleBlockCommand> ::=       <unknownExtended>
<multiBlockCommands> ::=       <apertureMacro>
<quadrantMode> ::=             "G74" | "G75"
<interpolationMode> ::=        "G01" | "G02" | "G03"
<regionBoundary> ::=           "G36" | "G37"
<comment> ::=                  "G04 " <commentChars> "*"
<commentChars> ::=             [ASCII] - ["*"]
<toolChange> ::=               "D" integer {integer}
<action> ::=                   "D01" | "D02" | "D03"
<coord> ::=                    ["X" integer] ["Y" integer] ["I" integer] ["J" integer]
<operation> ::=                <coord> <action>
<unknownStandard> ::=          (<anyCharExceptAsterisk>)* "*"
<unknownExtended> ::=          (<anyCharExceptAsterisk>)* "*"
<formtSpecification> ::=       "FSLA" "X" digit digit "Y" digit digit
<setUnits> ::=                 "MO" ("MM" | "IN")
<addAperture> ::=              "ADD" integer ([A-Z0-9]+) "," ({scientific "X"} | scientific)
<apertureMacro> ::=            "AM" <allowedChars>* "*" <apertures>
<apertures> ::=                <singleAperture> {<singleAperture>}
<singleAperture> ::=           <allowedChars>* "*" <optionalNewLines>
